[metadata]
name = Sublist3r
license = GPL-2.0
description = Subdomains enumeration tool for penetration testers
keywords = subdomain, dns, detection
url = https://github.com/aboul3la/Sublist3r
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Telecommunications Industry
    License :: OSI Approved :: GNU General Public License v2
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Security

[options]
packages = find:
install_requires =
    dnspython
    requests
    argparse; python_version=='2.7'
include_package_data = True
python_requires = >=2.7

[options.entry_points]
console_scripts = sublist3r = sublist3r:interactive
